[gd_scene load_steps=9 format=2]

[ext_resource path="res://HelvetiPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/levelselect.gd" type="Script" id=2]
[ext_resource path="res://sprites/output-onlinepngtools (6).png" type="Texture" id=3]
[ext_resource path="res://audio/sounds/selection.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/musicswitch.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/soundswitch.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 1 )

[node name="LevelSelection" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 959.54, 540.286 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1930.0
margin_bottom = 1090.0
rect_pivot_offset = Vector2( 481.744, 345.421 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 277.0
margin_top = 93.0
margin_right = 1653.0
margin_bottom = 996.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1376.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 1376.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level  Selection"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 1376.0
margin_bottom = 333.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 1"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 1376.0
margin_bottom = 447.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 2"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 451.0
margin_right = 1376.0
margin_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 3"

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 565.0
margin_right = 1376.0
margin_bottom = 675.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 4"

[node name="CenterContainer6" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 679.0
margin_right = 1376.0
margin_bottom = 789.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer6"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial"

[node name="CenterContainer7" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 793.0
margin_right = 1376.0
margin_bottom = 903.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer7"]
margin_left = 422.0
margin_right = 954.0
margin_bottom = 110.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer7/VBoxContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer7/VBoxContainer/CenterContainer"]
margin_right = 532.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer7/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer7/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 532.0
margin_bottom = 110.0
rect_min_size = Vector2( 472, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Main Menu"

[node name="ButtonSelection_sn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MusicSwitch" parent="." instance=ExtResource( 5 )]
position = Vector2( 1185.32, 561.016 )
scale = Vector2( 9, 9 )

[node name="SoundSwitch" parent="." instance=ExtResource( 6 )]
position = Vector2( 1244.65, 662.725 )
scale = Vector2( 8, 8 )
